--- a/src/app/pages/list-medicos/list-medicos.component.html
+++ b/src/app/pages/list-medicos/list-medicos.component.html
@@ -15,7 +15,9 @@
                 <h1>Medicos</h1>
             </div>
         </div>
-        
+        <div class="new-container">
+          
+        </div>
         <div class="card p-5 mb-3">
             <form [formGroup]="forms" (ngSubmit)="agregarMedico()">
                 <div class="input-group input-group-lg mb-3">
