--- a/src/app/pages/list-medicos/list-medicos.component.html
+++ b/src/app/pages/list-medicos/list-medicos.component.html
@@ -60,7 +60,8 @@
                     <button type="submit" class="btn btn-success btn-lg">
                         <i class="fa-solid fa-database"></i>
                         &nbsp;Aceptar
-                      </button>
+                    </button>
+                    <button class="d-grid gap-2" (click)="obtenerTarjetasService()"></button>
                   </div>
                 </form>
         </div>
