Obteniendo datos de la API

--- a/src/app/pages/list-medicos/list-medicos.component.html
+++ b/src/app/pages/list-medicos/list-medicos.component.html
@@ -20,10 +20,10 @@
             <form [formGroup]="forms" (ngSubmit)="agregarMedico()">
                 <div class="input-group input-group-lg mb-3">
                     <!-- Imagen -->
-                  <div class="input-group input-group-lg mb-3">
+                  <!-- <div class="input-group input-group-lg mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-link"></i></span>
                     <input formControlName="imagen" type="text" class="form-control" placeholder="Ingrese Url" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
+                  </div> -->
                     <!-- Nombre y Apellido -->
                     <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
                     <input formControlName="name" type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
@@ -61,7 +61,6 @@
 
             @for (Medicos of listMedico; track $index) {
                 <div class="card col-md-5 col-sm-6 col-lg-4" >
-                    <img [src]="Medicos.imagen" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">{{Medicos.name +' '+ Medicos.apellido}}</h5>
                         <ul>
