--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,7 +23,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="titulo text-center">
-                            AGREGAR TARJETA
+                            AGREGAR TARJETA NUEVA
                         </h5>
                         <form>
                             <div class="input-group input-group-lg mb-3">
