--- a/src/app/pages/list-medicos/list-medicos.component.html
+++ b/src/app/pages/list-medicos/list-medicos.component.html
@@ -17,59 +17,54 @@
         </div>
         
         <div class="card p-5 mb-3">
-            <form [formGroup]="forms" (ngSubmit)="agregarMedico()">
-                <div class="input-group input-group-lg mb-3">
-                    <!-- Imagen -->
-                  <!-- <div class="input-group input-group-lg mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-link"></i></span>
-                    <input formControlName="imagen" type="text" class="form-control" placeholder="Ingrese Url" aria-label="Username" aria-describedby="basic-addon1">
-                  </div> -->
-                    <!-- Nombre y Apellido -->
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
-                    <input formControlName="name" type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
-                    <input formControlName="apellido" type="text" class="form-control" placeholder="Apellido" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                  <!-- Cedula -->
-                  <div class="input-group input-group-lg mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-credit-card"></i></span>
-                    <input formControlName="cedula" type="text" class="form-control" placeholder="Cedula" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                  <!-- Telefono -->
-                  <div class="input-group input-group-lg mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-phone"></i></span>
-                    <input formControlName="telefono" type="text" class="form-control" placeholder="Telefono" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                  <!-- Especialidad -->
-                  <div class="input-group input-group-lg mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user-doctor"></i></span>
-                    <input formControlName="especialidad" type="text" class="form-control" placeholder="Especialidad" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                  <!-- Cargo -->
-                  <div class="input-group input-group-lg mb-3">
-                    <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-briefcase"></i></span>
-                    <input formControlName="cargo" type="text" class="form-control" placeholder="Cargo" aria-label="Username" aria-describedby="basic-addon1">
-                  </div>
-                  <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-success btn-lg">
-                        <i class="fa-solid fa-database"></i>
-                        &nbsp;Aceptar
-                      </button>
-                  </div>
-                </form>
+          <form [formGroup]="forms" >
+            <div class="input-group input-group-lg mb-3">
+                <!-- Nombre y Apellido -->
+                <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
+                <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
+                <input formControlName="apellido" type="text" class="form-control" placeholder="Apellido" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <!-- Cedula -->
+              <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-credit-card"></i></span>
+                <input formControlName="cedula" type="text" class="form-control" placeholder="Cedula" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <!-- Telefono -->
+              <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-phone"></i></span>
+                <input formControlName="telefono" type="text" class="form-control" placeholder="Telefono" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <!-- Especialidad -->
+              <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user-doctor"></i></span>
+                <input formControlName="especialidad" type="text" class="form-control" placeholder="Especialidad" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <!-- Cargo -->
+              <div class="input-group input-group-lg mb-3">
+                <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-briefcase"></i></span>
+                <input formControlName="cargo" type="text" class="form-control" placeholder="Cargo" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div class="d-grid gap-2">
+                <button type="button" (click)="safeData()" class="btn btn-success btn-lg">
+                    <i class="fa-solid fa-database"></i>
+                    &nbsp;{{labelButton}}
+                  </button>
+              </div>
+            </form>
         </div>
         <div class="row">
 
-            @for (Medicos of listMedico; track $index) {
+            @for (Medicos of medico; track Medicos;let  i = $index) {
                 <div class="card col-md-5 col-sm-6 col-lg-4" >
                     <div class="card-body">
-                        <h5 class="card-title">{{Medicos.name +' '+ Medicos.apellido}}</h5>
+                        <h5 class="card-title">{{Medicos.nombre +' '+ Medicos.apellido}}</h5>
                         <ul>
                             <li>Cedula: {{Medicos.cedula}}</li>
                             <li>Telefono: {{Medicos.telefono}}</li>
                             <li>Especialidad: {{Medicos.especialidad}}</li>
                             <li>Cargo: {{Medicos.cargo}}</li>
                         </ul>
-                        <a href="#" class="btn btn-primary">Cita</a>
+                        <button class="btn btn-primary" (click)="actualizarMedico(i)">Cita</button>
                     </div>
                 </div>
             }
