Metodos Get y Put

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -28,14 +28,14 @@
                         <form>
                             <div class="input-group input-group-lg mb-3">
                                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
-                                <input formControlName="titular" type="text" class="form-control" placeholder="Usuario" aria-label="Username" aria-describedby="basic-addon1">
+                                <input  type="text" class="form-control" placeholder="Usuario" aria-label="Username" aria-describedby="basic-addon1">
                               </div>
                               
                               <div class="row">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="input-group input-group-lg input-group-md mb-3">
                                         <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-key"></i></span>
-                                        <input formControlName="cvv" type="password" class="form-control" placeholder="Contraseña" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input  type="password" class="form-control" placeholder="Contraseña" aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                               </div>
