--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -10,39 +10,43 @@
 </head>
 <body>
     <h1 class="text-center pb-2">Pacientes</h1>
-    <form class="pb-3">
+    <form class="pb-3" [formGroup]="forms">
         <!-- #Historial -->
         <div class="historial row">
             <div class="mb-2 col-4">
                 <label class="form-label">#Historial</label>
-                <input type="text" class="form-control">
+                <input formControlName="numero_historial" type="text" class="form-control" >
             </div>
             <!-- Nombre -->
             <div class="mb-2 col-4">
-                <label class="form-label">Nombre</label>
-                <input type="text" class="form-control" >
+                <label class="form-label" >Nombre</label>
+                <input formControlName="nombre" type="text"  class="form-control">
             </div>
             <!-- Apellido -->
             <div class="mb-2 col-4">
-                <label class="form-label">Apellido</label>
-                <input type="text" class="form-control" >
+                <label class="form-label" >Apellido</label>
+                <input formControlName="apellido" type="text"  class="form-control">
             </div>
         </div>
         <div class="cedulaTelf row">
 
             <!-- Cedula -->
             <div class="mb-2 col-6">
-                <label class="form-label">Cedula</label>
-                <input type="text" class="form-control" >
+                <label class="form-label" >Cedula</label>
+                <input formControlName="cedula" type="text"  class="form-control">
             </div>
             <!-- Telefono -->
             <div class="mb-2 col-6">
-                <label class="form-label">Teléfono</label>
-                <input type="text" class="form-control" >
+                <label class="form-label" >Teléfono</label>
+                <input formControlName="telefono" type="text"  class="form-control">
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Editar</button>
-      </form>
+        <button type="button" class="btn btn-primary" (click)="GuardarCambios()"> 
+            &nbsp;{{labelBuuton}}
+        </button>
+    </form>
+
+
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
             <tr>
@@ -63,8 +67,12 @@
                     <td>{{Pacientes.apellido}}</td>
                     <td>{{Pacientes.cedula}}</td>
                     <td>{{Pacientes.telefono}}</td>
-                    <td class="text-center text-primary"><i class="fa-solid fa-pen-to-square"></i></td>
-                    <td class="text-center text-danger"><i class="fa-solid fa-trash"></i></td>
+                    <td class="text-center text-primary">
+                            <i class="fa-solid fa-pen-to-square" (click)="actualizarPaciente(i)"></i>
+                    </td>
+                    <td class="text-center text-danger">
+                        <i class="fa-solid fa-trash"></i>
+                    </td>
                 </tr>
             </tbody>
             }
