--- a/src/app/pages/list-medicos/list-medicos.component.css
+++ b/src/app/pages/list-medicos/list-medicos.component.css
@@ -1,3 +1,13 @@
+h1{
+    color: rgb(0, 135, 220);
+}
 .card{
     margin: 0px;
+}
+li{
+    list-style: none;
+}
+button{
+    background-color: rgb(0, 135, 220);
+    color: white;
 }
