--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -10,42 +10,47 @@
 </head>
 <body>
     <h1 class="text-center pb-2">Pacientes</h1>
-    <form class="pb-3" [formGroup]="forms">
-        <!-- #Historial -->
-        <div class="historial row">
-            <div class="mb-2 col-4">
-                <label class="form-label">#Historial</label>
-                <input formControlName="numero_historial" type="text" class="form-control" >
-            </div>
-            <!-- Nombre -->
-            <div class="mb-2 col-4">
-                <label class="form-label" >Nombre</label>
-                <input formControlName="nombre" type="text"  class="form-control">
-            </div>
-            <!-- Apellido -->
-            <div class="mb-2 col-4">
-                <label class="form-label" >Apellido</label>
-                <input formControlName="apellido" type="text"  class="form-control">
-            </div>
-        </div>
-        <div class="cedulaTelf row">
+    <div class="container">
 
-            <!-- Cedula -->
-            <div class="mb-2 col-6">
-                <label class="form-label" >Cedula</label>
-                <input formControlName="cedula" type="text"  class="form-control">
+        <form class="pb-3" [formGroup]="forms">
+            <!-- #Historial -->
+            <div class="historial row">
+                <div class="mb-2 col-sm-6 col-md-4 col-lg-4">
+                    <label class="form-label">#Historial</label>
+                    <input formControlName="numero_historial" type="text" class="form-control" >
+                </div>
+                <!-- Nombre -->
+                <div class="mb-2 col-sm-6 col-md-4 col-lg-4 ">
+                    <label class="form-label" >Nombre</label>
+                    <input formControlName="nombre" type="text"  class="form-control">
+                </div>
+                <!-- Apellido -->
+                <div class="mb-2 col-sm-6 col-md-4 col-lg-4">
+                    <label class="form-label" >Apellido</label>
+                    <input formControlName="apellido" type="text"  class="form-control">
+                </div>
             </div>
-            <!-- Telefono -->
-            <div class="mb-2 col-6">
-                <label class="form-label" >Teléfono</label>
-                <input formControlName="telefono" type="text"  class="form-control">
+            <div class="cedulaTelf row">
+                
+                <!-- Cedula -->
+                <div class="mb-2 col-sm-12 col-md-12 col-lg-6">
+                    <label class="form-label" >Cedula</label>
+                    <input formControlName="cedula" type="text"  class="form-control">
+                </div>
+                <!-- Telefono -->
+                <div class="mb-2 col-sm-12 col-md-12 col-lg-6">
+                    <label class="form-label" >Teléfono</label>
+                    <input formControlName="telefono" type="text"  class="form-control">
+                </div>
             </div>
-        </div>
-        <button type="button" class="btn btn-primary" (click)="GuardarCambios()"> 
-            &nbsp;{{labelBuuton}}
-        </button>
-    </form>
-
+            <button type="button" class="btn btn-primary" (click)="GuardarCambios()"> 
+                &nbsp;{{labelBuuton}}
+            </button>
+            <button type="button" class="btn btn-primary ml-1 addUser" (click)="GuardarCambios()">Agregar Usuario
+            </button>
+        </form>
+    </div>
+        
 
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
