división de componentes

--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="text-3xl font-bold underline">
+        Hello world!
+      </h1>
     <h1 class="text-center pb-2">Pacientes</h1>
     <div class="container">
 
