--- a/src/app/pages/side-bar/side-bar.component.css
+++ b/src/app/pages/side-bar/side-bar.component.css
@@ -1,42 +1,16 @@
-input#abrir-cerrar { visibility:hidden; position: absolute; top: -9999px; }
-#sidebar {
-    width: 0;
+.example-container {
+    width: 500px;
+    height: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+  }
+  
+  .example-sidenav-content {
+    display: flex;
     height: 100%;
-    background: #333;
-    color: white;
-    transition: width .4s;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-#contenido {
-    margin-left: 0;
-    transition: margin-left .4s;
-}
-input#abrir-cerrar:checked ~ #sidebar {
-    width:300px;
-}
-input#abrir-cerrar:checked + label[for="abrir-cerrar"], input#abrir-cerrar:checked ~ #contenido {
-    margin-left:300px;
-    transition: margin-left .4s;
-}
-input#abrir-cerrar:checked + label[for="abrir-cerrar"] .cerrar { 
-    display:inline;
-}
-input#abrir-cerrar:checked + label[for="abrir-cerrar"] .abrir {
-    display:none;
-}
-
-.wrapper .sidebar ul li a{
-	display: block;
-	padding: 13px 30px;
-	border-bottom: 1px solid #10558d;
-	color: rgb(241, 237, 237);
-	font-size: 16px;
-	position: relative;
-}
-.wrapper .sidebar ul li a .icon{
-	color: #dee4ec;
-	width: 30px;
-	display: inline-block;
-}
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .example-sidenav {
+    padding: 20px;
+  }
