--- a/src/app/pages/side-bar/side-bar.component.html
+++ b/src/app/pages/side-bar/side-bar.component.html
@@ -1,53 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-  <label for="abrir-cerrar">
-      <span class="abrir">Abrir</span>
-      <span class="cerrar">Cerrar</span>
-  </label>
-  <div id="sidebar">
-    <h1>Hello</h1>
-    <!-- <ul>
-      <li>
-          <a href=”#” class=”active”>
-              <span class=”icon”><i class=”fas fa-home”></i></span>
-              <span class=”item”>Home</span>
-          </a>
-      </li>
-      <li>
-          <a href=”#”>
-              <span class=”icon”><i class=”fas fa-desktop”></i></span>
-              <span class=”item”>My Dashboard</span>
-          </a>
-      </li>
-      <li>
-          <a href=”#”>
-              <span class=”icon”><i class=”fas fa-user-friends”></i></span>
-              <span class=”item”>People</span>
-          </a>
-      </li>
-      <li>
-          <a href=”#”>
-              <span class=”icon”><i class=”fas fa-tachometer-alt”></i></span>
-              <span class=”item”>Perfomance</span>
-          </a>
-      </li>
-      <li>
-          <a href=”#”>
-              <span class=”icon”><i class=”fas fa-database”></i></span>
-              <span class=”item”>Development</span>
-          </a>
-      </li>
-</ul> -->
-  </div>
-  <div id="contenido">
-    <p>hola</p>
-  </div>
-</body>
-</html>
+<mat-drawer-container class="example-container" autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+      <p>Auto-resizing sidenav</p>
+      @if (showFiller) {
+        <p>Lorem, ipsum dolor sit amet consectetur.</p>
+      }
+      <button (click)="showFiller = !showFiller" mat-raised-button>
+        Toggle extra text
+      </button>
+    </mat-drawer>
+  
+    <div class="example-sidenav-content">
+      <button type="button" mat-button (click)="drawer.toggle()">
+        Toggle sidenav
+      </button>
+    </div>
+  
+  </mat-drawer-container>
