--- a/src/app/domine/medicos/pages/list-medicos/list-medicos.component.html
+++ b/src/app/domine/medicos/pages/list-medicos/list-medicos.component.html
@@ -1,5 +1,21 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Document</title>
+</head>
+<body>
+  <div class="container mx-auto">
+    <div class="container grid grid-cols-3 gap-2">
+      @for (medicoAPI of medico; track medicoAPI) {
+        <app-medico [medicoAPI]="medicoAPI"/>
+      }
+    </div>
+  </div>
+</body>
+</html>
 
-<app-medico/>
 
 
