--- a/src/app/pages/list-medicos/list-medicos.component.html
+++ b/src/app/pages/list-medicos/list-medicos.component.html
@@ -70,7 +70,7 @@
       </div>
     </div>
   </nav>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col text-center">
                 <h1>Medicos</h1>
@@ -80,27 +80,27 @@
         <div class="card p-5 mb-3">
           <form [formGroup]="forms" >
             <div class="input-group input-group-lg mb-3">
-                <!-- Nombre y Apellido -->
+                
                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user"></i></span>
                 <input formControlName="nombre" type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
                 <input formControlName="apellido" type="text" class="form-control" placeholder="Apellido" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-              <!-- Cedula -->
+              
               <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-credit-card"></i></span>
                 <input formControlName="cedula" type="text" class="form-control" placeholder="Cedula" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-              <!-- Telefono -->
+              
               <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-phone"></i></span>
                 <input formControlName="telefono" type="text" class="form-control" placeholder="Telefono" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-              <!-- Especialidad -->
+             
               <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user-doctor"></i></span>
                 <input formControlName="especialidad" type="text" class="form-control" placeholder="Especialidad" aria-label="Username" aria-describedby="basic-addon1">
               </div>
-              <!-- Cargo -->
+              
               <div class="input-group input-group-lg mb-3">
                 <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-briefcase"></i></span>
                 <input formControlName="cargo" type="text" class="form-control" placeholder="Cargo" aria-label="Username" aria-describedby="basic-addon1">
@@ -139,10 +139,11 @@
                 </div>
                 
                 
-            }
+            } 
 
         </div>
         
     </div>
+    -->
 </body>
 </html>
