actualización de formulario

--- a/src/app/domine/medicos/componente/form-medico/form-medico.component.html
+++ b/src/app/domine/medicos/componente/form-medico/form-medico.component.html
@@ -1,89 +1,50 @@
-<div class="container">    
-    <div class="card p-5 mb-3">
-      <form [formGroup]="forms" >
-        <div class="input-group input-group-lg mb-3">
-            <!-- Nombre y Apellido -->
-            <span class="input-group-text" 
-                id="basic-addon1">
-                <i class="fa-solid fa-user"></i>
-            </span>
-            <input formControlName="nombre" 
-                type="text" 
-                class="form-control" 
-                placeholder="Nombre" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-            <input formControlName="apellido" 
-                type="text" 
-                class="form-control" 
-                placeholder="Apellido" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-          </div>
-          <!-- Cedula -->
-          <div class="input-group input-group-lg mb-3">
-            <span class="input-group-text" 
-                id="basic-addon1">
-                <i class="fa-solid fa-credit-card"></i>
-            </span>
-            <input formControlName="cedula" 
-                type="text" 
-                class="form-control" 
-                placeholder="Cedula" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-          </div>
-          <!-- Telefono -->
-          <div class="input-group input-group-lg mb-3">
-            <span class="input-group-text" 
-                id="basic-addon1">
-                <i class="fa-solid fa-phone"></i>
-            </span>
-            <input formControlName="telefono" 
-                type="text" 
-                class="form-control" 
-                placeholder="Telefono" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-          </div>
-          <!-- Especialidad -->
-          <div class="input-group input-group-lg mb-3">
-            <span class="input-group-text" 
-                id="basic-addon1">
-                <i class="fa-solid fa-user-doctor"></i>
-            </span>
-            <input formControlName="especialidad" 
-                type="text" 
-                class="form-control" 
-                placeholder="Especialidad" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-          </div>
-          <!-- Cargo -->
-          <div class="input-group input-group-lg mb-3">
-            <span class="input-group-text" 
-                id="basic-addon1">
-                <i class="fa-solid fa-briefcase"></i>
-            </span>
-            <input formControlName="cargo" 
-                type="text" 
-                class="form-control" 
-                placeholder="Cargo" 
-                aria-label="Username" 
-                aria-describedby="basic-addon1">
-          </div>
-          <div class="d-grid gap-2 buttons">
-            <div class="row justify-content-around">
-              <button type="button" 
-                class="btn  btn-lg col-lg-5 col-md-5 col-sm-12 m-1">
-                <i class="fa-solid fa-database"></i>
-                &nbsp;{{labelButton}}
-              </button>
-              <button type="button" class="btn  btn-lg col-lg-5 col-md-5 col-sm-12 post m-1">
-                <i class="fa-solid fa-database"></i>
-                &nbsp;{{labelAnadirMedico}}
-              </button>
-            </div>
-          </div>
-        </form>
+
+
+<form class="max-w-md mx-auto">
+  <div class="relative z-0 w-full mb-5 group">
+      <input type="email" 
+        name="floating_email" 
+        id="floating_email" 
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" 
+        placeholder=" " required />
+      <label for="floating_email" 
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Correo
+      </label>
+  </div>
+  <div class="relative z-0 w-full mb-5 group">
+      <input type="password" 
+        name="floating_password" 
+        id="floating_password" 
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" 
+        placeholder=" " required />
+      <label for="floating_password" 
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Especialidad
+      </label>
+  </div>
+  <div class="relative z-0 w-full mb-5 group">
+      <input type="password" 
+        name="repeat_password" id="floating_repeat_password" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+      <label for="floating_repeat_password" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Cargo</label>
+  </div>
+  <div class="grid md:grid-cols-2 md:gap-6">
+    <div class="relative z-0 w-full mb-5 group">
+        <input type="text" name="floating_first_name" id="floating_first_name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+        <label for="floating_first_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Nombre</label>
     </div>
+    <div class="relative z-0 w-full mb-5 group">
+        <input type="text" name="floating_last_name" id="floating_last_name" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+        <label for="floating_last_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Apellido</label>
+    </div>
+  </div>
+  <div class="grid md:grid-cols-2 md:gap-6">
+    <div class="relative z-0 w-full mb-5 group">
+        <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" name="floating_phone" id="floating_phone" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+        <label for="floating_phone" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Telefono</label>
+    </div>
+    <div class="relative z-0 w-full mb-5 group">
+        <input type="text" name="floating_company" id="floating_company" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
+        <label for="floating_company" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Cedula</label>
+    </div>
+  </div>
+  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+</form>
