--- a/src/app/domine/medicos/pages/list-medicos/list-medicos.component.html
+++ b/src/app/domine/medicos/pages/list-medicos/list-medicos.component.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+  <app-header/>
   <div class="container mx-auto">
-    <div class="container grid grid-cols-3 gap-2">
+    <div class="container grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 gap-2">
       @for (medicoAPI of medico; track medicoAPI) {
         <app-medico [medicoAPI]="medicoAPI"/>
       }
