usando el flujo de datos entre padre e hijo y el ngOnchanges

--- a/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
+++ b/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
@@ -1,8 +1,8 @@
 <app-header/>
 
-<app-form-medico/>
+<app-form-medico [dataMedico]="dataMedico"/>
 
-
+<app-table-medico (medicoIndex)="fromChild($event)"/>
 
 
 
