--- a/src/app/domine/medicos/componente/form-medico/form-medico.component.html
+++ b/src/app/domine/medicos/componente/form-medico/form-medico.component.html
@@ -16,7 +16,7 @@
   <div class="relative z-0 w-full mb-5 group">
       <input 
         formControlName="especialidad"
-        type="password" 
+        type="text" 
         name="floating_password" 
         id="floating_password" 
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" 
@@ -29,7 +29,7 @@
   <div class="relative z-0 w-full mb-5 group">
       <input 
         formControlName="cargo"
-        type="password" 
+        type="text" 
         name="repeat_password" 
         id="floating_repeat_password" 
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" 
@@ -95,5 +95,6 @@
         </label>
     </div>
   </div>
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Actulizar</button>
+  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" (click)="updateMedico()">&nbsp;{{labelButton}}</button>
+  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 ml-5" (click)="updateMedico()">&nbsp;{{labelAddMedico}}</button>
 </form>
