--- a/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
+++ b/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
@@ -1,8 +1,8 @@
 <app-header/>
 
-<app-form-medico [dataMedico]="dataMedico"/>
+<app-form-medico [dataMedico]="dataMedico" (actualizado)="ngAfterViewInit()"/>
 
-<app-table-medico (medicoIndex)="fromChild($event)"/>
+<app-table-medico (medicoIndex)="fromChild($event)" />
 
 
 
