--- a/src/app/domine/medicos/componente/table-medico/table-medico.component.html
+++ b/src/app/domine/medicos/componente/table-medico/table-medico.component.html
@@ -29,7 +29,7 @@
                         <td class="whitespace-nowrap px-6 py-4">{{medicos.cargo}}</td>
                         <td class="whitespace-nowrap px-6 py-4">
                           <i class="fa-solid fa-pen mr-5 pencil" (click)="medicoData(i)"></i>
-                          <i class="fa-solid fa-trash trash"></i>
+                          <i class="fa-solid fa-trash trash" (click)="deleteMedico(i)"></i>
                         </td>
                     </tr>
                 }
