--- a/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
+++ b/src/app/domine/medicos/pages/dashboard-medicos/dashboard-medicos.component.html
@@ -1,6 +1,6 @@
 <app-header/>
 
-<app-form-medico [dataMedico]="dataMedico" (actualizado)="ngAfterViewInit()"/>
+<app-form-medico [dataMedico]="dataMedico" (actualizado)="ngAfterViewInit()" (anadido)="refreshData()"/>
 
 <app-table-medico (medicoIndex)="fromChild($event)" />
 
